CMTYAEM-888 Fixed paragraph spacing and H tag size

--- a/ui.frontend/src/main/webpack/components/accordion/scss/styles/_default.scss
+++ b/ui.frontend/src/main/webpack/components/accordion/scss/styles/_default.scss
@@ -6,10 +6,6 @@
         margin-bottom: 32px;
     }
 
-    &__header {
-        line-height: 0;
-    }
-
     &__button {
         border-top: 1px solid $wdc-color-soap-400;
         border-bottom: 0;
@@ -43,8 +39,6 @@
     &__title {
         font-style: $font-style-normal;
         font-weight: $font-weight-bold;
-        font-size: 18px;
-        line-height: 24px;
         color: $wdc-color-black-pepper-600;
         margin-left: 8px;
         display: inline-block;
@@ -57,7 +51,6 @@
         margin-left: 32px;
 
         p {
-            margin: 0;
             font-style: $font-style-normal;
             font-weight: $font-weight-normal;
             font-size: 15px;
